# galoiscore

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
api/routers/: ecc.py  field.py  utils.py
src/core/: __init__.py  base.py  ecc.py  field.py  prime.py
src/crypto/ecc/: __init__.py  curves.py  point.py
src/galois_core/: __init__.py  utils.py
src/galois_core/tests/: test_field.py
src/utils/: __init__.py  arithmetic.py  primes.py
tests/: test_ecc.py  test_phase1.py
